--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=conectaMemory
-spring.datasource.url=jdbc:mysql://localhost:3306/memory?createDatabaseIfNotExist=true&useSSL=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
