--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=conectaMemory
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:mysql://junction.proxy.rlwy.net:12058/railway
+spring.datasource.username=root
+spring.datasource.password=WClMttOTOFZoBdscWbeRrDIoTYtmGCQp
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
